--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>bvrit homepage</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="C:\Users\Rishika Reddy\OneDrive\Desktop\bvrit\homepage\styles.css">
+    <link rel="https://github.com/RISHIKA29/bvrit-home-page/blob/main/styles.css">
   </head>
   <body class="middle">
     <div class="container-fluid ">
