--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 border con">
-          <a href="https://github.com/RISHIKA29/bvrit-home-page/blob/main/feshman.html"><h4><u>Freshman/ BS & H</u></h4></a>
+          <a href=""><h4><u>Freshman/ BS & H</u></h4></a>
           <img src="https://i.ytimg.com/vi/7z5_kB552Go/maxresdefault.jpg" alt="Abdul Kalam Block" width="200px" height="200px">
 
         </div>
